2/2.4/manifests/service-client.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-client-svc
spec:
  type: ClusterIP
  selector:
    app: todo
  ports:
    - name: http 
      port: 80
      protocol: TCP
      targetPort: 5000
